# dotfiles

./: .gitignore  .gitlab-ci.yml  .gitmodules  .yamllint  LICENSE  Makefile  Pipfile  README.md  Rakefile  install.sh  macos.md  pyproject.toml
.ansible/: bootstrap.yml  desktop.yml  requirements.yml
.make.d/: 00_make.mk  ansible.mk  git.mk  python.mk  shell.mk
attic/: dot.profile
attic/dot.bashrc.d/: 00_options  10_history  30_prompt  50_chruby  50_pyenv  50_rust
configs/: dot.gitconfig  dot.tmux.conf  dot.vimrc  dot.zshenv  dot.zshrc  kitty.conf  starship.toml  user-dirs.dirs
configs/dot.config/: liquidpromptrc
configs/dot.zshrc.d/: 10_oh-my-zsh  10_ssh-agent  20_aliases  30_prompt  50_docker  50_golang  50_npm  50_pyenv  50_python  50_rust
linux-gnu/: dot.bash_profile  dot.bashrc  dot.gitconfig  dot.tmux.conf  dot.vimrc  kitty.conf  setup.sh  starship.toml  terminalrc
linux-gnu/dot.bashrc.d/: 10_history  10_ssh-agent  20_aliases  50_git  50_golang  50_npm  50_rust
linux-gnu/user/: bash_aliases  dot.abcde.conf  dot.bash_aliases  dot.bash_profile  dot.bashrc  dot.profile  dot.tmux.conf  dot.vimrc  starship.toml  terminalrc  tmux.conf  tmux.conf.bak  user-dirs.dirs  vimrc
linux/user/: abcde.conf  bash_aliases  bashrc  tmux.conf  vimrc
multi/atom/: config.cson
multi/fonts/: README.md
multi/geany/: geany (darth's conflicted copy 2012-06-22).conf  geany.conf
multi/handbrake/: Prospero1080i.plist  Prospero1080p.plist  Prospero480i.plist  Prospero480p.plist  (+4 more)
scripts/: backup-home.sh  git-com  git-fetch-all  git-prune-all  git-prune-local  git-stats
(+135 files in other folders)
