[tool.poetry]
name = ".dotfiles"
version = "0.1.0"
description = ""
authors = ["Chris Clonch <chris@theclonchs.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.2.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.0.12"
yamllint = "^1.26.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
