[tool.poetry]
name = ".dotfiles"
version = "0.1.0"
description = ""
authors = ["Chris Clonch <chris@theclonchs.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.6.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.0.2"
yamllint = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
